# actifoilselector

./: .gitignore  .requirements.txt  CITATION.cff  README.rst  TODO  pyproject.toml
foilselector/: __init__.py  constants.py  foldermanagement.py  generic.py  reactionnaming.py
foilselector/decay/: __init__.py  chaining.py
foilselector/fluxconversion/: __init__.py  convert.py  filereading.py  graphing.py  interactions.py  schemes.py  smartconvert.py
foilselector/openmcextension/: __init__.py  constants.py  extended_io.py  library_reader.py  table.py
foilselector/optimizer/: __init__.py  limit.py  selection_sum.py
foilselector/optimizer/comb_sum/: __init__.py  __main__.py  comb_sum.py
foilselector/physicalparameters/: __init__.py  choosematerial.py  efficiency.py  filepaths.py  price.py
foilselector/physicalparameters/material_properties/: .GoodfellowMaterialDensities.csv  elemental_frac_isotopic_frac_physical_property.csv  elemental_frac_isotopic_frac_physical_property_long.csv  elemental_frac_isotopic_frac_physical_short.csv  goodfellow_physicalprop.csv  goodfellow_physicalprop_long.csv
foilselector/physicalparameters/photopeak_efficiency/: Absolute_photopeak_efficiencyMeV.csv  Photopeak_efficiencyMeV.csv
foilselector/physicalparameters/price/: goodfellow_selected_elements.csv
foilselector/script/: __init__.py  step1.py  step2.py  step3.py
foilselector/selfshielding/: __init__.py  sigma_extremum.py
foilselector/simulation/: __init__.py  composition.py  efficiency.py  gamma.py  helper.py  schedule.py  visualize.py
(+21 files in other folders)
